--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@layer components {
+
+    .sidebar-icon { 
+        @apply 
+            relative flex items-center justify-center h-12 w-12 my-2 mx-auto bg-gray-800 text-orange-500
+            rounded-3xl    
+            hover:bg-violet-800 hover:text-white hover:rounded-xl hover:cursor-pointer
+            transition-all duration-100 ease-linear;
+    }
+
+    .sidebar-tooltip { 
+        @apply 
+            absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md
+            text-white bg-gray-900 
+            text-xs font-bold 
+            transition-all duration-100 scale-0 origin-left;
+    }
+
 }
